@@ -2,6 +2,8 @@ Nutch Change Log
 
 (trunk) Current Development:
 
+* NUTCH-1117 JUnit test for index-anchor (lewismc)
+
 * NUTCH-1451 Upgrade automaton jar to 1.11-8 (lewismc)
 
 * NUTCH-1488 bin/nutch to run junit from any directory (snagel via lewismc)
